# naijaml

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
benchmarks/: README.md  benchmark-dashboard.html  benchmark_words.json  results.json  tokenizer_benchmark.py
notebooks/: 00_explore_naijaml.ipynb  train_yoruba_bilstm.ipynb
scripts/: train_lstm_diacritizer.py  train_tfidf_sentiment.py  upload_models_to_hf.py
src/naijaml/: __init__.py
src/naijaml/data/: __init__.py  cache.py  loader.py  registry.py
src/naijaml/data/datasets/: __init__.py  masakhaner.py  masakhanews.py  naijasenti.py
src/naijaml/nlp/: __init__.py  diacritizer.py  evaluation.py  evaluation_results.json  igbo_diacritizer.py  lang_model.json  langdetect.py  preprocess.py  sentiment.py  tokenizer.py
src/naijaml/nlp/models/tokenizer/: hau-8k-rust.json  ibo-8k-rust.json  naija-8k-rust.json  pcm-8k-rust.json  yor-8k-rust.json
src/naijaml/utils/: __init__.py  constants.py  download.py
tests/: conftest.py
tests/fixtures/: language_samples.json
tests/test_nlp/: test_diacritizer.py  test_dot_below_diacritizer.py  test_igbo_diacritizer.py  test_langdetect.py  test_tokenizer.py
