[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naijaml"
version = "0.0.1"
description = "Open-source ML tools, libraries, and notebooks for the Nigerian ML ecosystem"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "Ugochukwu Onyebuchi" }]
keywords = ["machine-learning", "nigeria", "nlp", "african-languages", "yoruba", "hausa", "igbo"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/naijaml/naijaml"
Repository = "https://github.com/naijaml/naijaml"
